--- a/ted.html
+++ b/ted.html
@@ -43,7 +43,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/ted/speech.jpg" alt="">
+                  <img src="assets/img/ted/speech.JPG" alt="">
                 </div>
 
                 <div class="swiper-slide">
