--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Charlene Rocha</h1>
-      <p>I am a <span class="typed" data-typed-items= "Software Engineer,TEDx speaker,Published Author,Lifelong Learner"></span></p>
+      <p>I am a <span class="typed" data-typed-items= "Software Engineer,TEDx speaker,Lifelong Learner"></span></p>
       <div class="social-links">
         <a href="mailto:charocha03@gmail.com" target="_blank" class="envelope"><i class="bx bx-envelope"></i></a>
         <a href="https://www.linkedin.com/in/-charlene-rocha/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -680,7 +680,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Charlene Rocha</h3>
-      <p>Software Engineer, TEDx speaker, Published Author, & Lifelong Learner</p>
+      <p>Software Engineer, TEDx speaker, & Lifelong Learner</p>
       <div class="social-links">
         <a href="mailto:charocha03@gmail.com" target="_blank" class="envelope"><i class="bx bx-envelope"></i></a>
         <a href="https://www.linkedin.com/in/-charlene-rocha/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
