--- a/index.html
+++ b/index.html
@@ -663,11 +663,11 @@
                   <a href="mailto:charocha03@gmail.com" target="_blank" class="button" id="test">Contact Me!</a>
                 </div>
               </div>
-              <div class="col-md-6 form-group mt-3 mt-md-0">
+<!--               <div class="col-md-6 form-group mt-3 mt-md-0">
                 <div class="text-center">
                   <a href="mailto:charocha03@gmail.com" target="_blank" class="button" id="test">Resume</a>
                 </div>
-              </div>
+              </div> -->
           </div>
         </div>
 
