--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
           <div class="col-lg-6 pt-4 pt-lg-0 content">
             <h3>Who Am I?</h3>
             <p>
-              I am an innovative 17-year-old beginner programmer with a keen interest in computer science and its application in building software systems. With my dedication, hardwork, and passion for learning I hope to positively impact the world. I look forward to pursuing more opportunities within the field.
+              With a keen interest in computer science and its application in building software systems, I am currently looking for Spring 2022 software development co-op opportunities. My dedication, hardwork, and intellectual curiousity keep me determined to advance my learning and have pushed me to create meaningful, complex projects.
+              
+              My vast interests are demonstrated through my unique experiences such as starring in an environmental activism TV series, leading women in STEM workshops, and giving TEDx Talks.
             </p>
             <div class="row">
               <div class="col-lg-6">
