trying to include resume

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h3>Who Am I?</h3>
             <p>
               With a keen interest in computer science and its application in building software systems, I am currently looking for Spring 2022 software development co-op opportunities. My dedication, hardwork, and intellectual curiousity keep me determined to advance my learning and have pushed me to create meaningful, complex projects.
-              
+
               My vast interests are demonstrated through my unique experiences such as starring in an environmental activism TV series, leading women in STEM workshops, and giving TEDx Talks.
             </p>
             <div class="row">
@@ -665,11 +665,11 @@
                   <a href="mailto:charocha03@gmail.com" target="_blank" class="button" id="test">Contact Me!</a>
                 </div>
               </div>
-<!--               <div class="col-md-6 form-group mt-3 mt-md-0">
+              <div class="col-md-6 form-group mt-3 mt-md-0">
                 <div class="text-center">
-                  <a href="mailto:charocha03@gmail.com" target="_blank" class="button" id="test">Resume</a>
+                  <a href="path_to_file" download="Charlene_Rocha" target="_blank" class="button" id="test">Resume</a>
                 </div>
-              </div> -->
+              </div>
           </div>
         </div>
 
