--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
               </div>
               <div class="col-md-6 form-group mt-3 mt-md-0">
                 <div class="text-center">
-                  <a href="path_to_file" download="Charlene_Rocha" target="_blank" class="button" id="test">Resume</a>
+                  <a href="path_to_file" download="Charlene_Rocha_Resume" target="_blank" class="button" id="test">Resume</a>
                 </div>
               </div>
           </div>
