adding to google

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="google-site-verification" content="3X__2uhnnzaXMqb66k4kK1E6Gx8CcVw8iMFyFz_ieTg" />
 
   <title>Charlene Rocha</title>
   <meta content="Charlene Rocha Resume" name="description">
