internship date update

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0 content">
             <h3>Who Am I?</h3>
             <p>
-              With a keen interest in computer science and its application in building software systems, I am currently looking for Spring 2022 software development co-op opportunities. My dedication, hardwork, and intellectual curiousity keep me determined to advance my learning and have pushed me to create meaningful, complex projects.
+              With a keen interest in computer science and its application in building software systems, I am currently looking for Winter 2023 software development co-op opportunities. My dedication, hardwork, and intellectual curiousity keep me determined to advance my learning and have pushed me to create meaningful, complex projects.
 
               My vast interests are demonstrated through my unique experiences such as starring in an environmental activism TV series, leading women in STEM workshops, and giving TEDx Talks.
             </p>
