added All in Good Waste and updated awards

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         <a href="mailto:charocha03@gmail.com" target="_blank" class="envelope"><i class="bx bx-envelope"></i></a>
         <a href="https://www.linkedin.com/in/-charlene-rocha/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://www.instagram.com/charlenerocha_/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <!-- <a href="#" class="github"><i class="bx bxl-github"></i></a> -->
+        <a href="https://github.com/charlenerocha" target="_blank" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://twitter.com/_charlenerocha" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.facebook.com/charlene.rocha.98" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <!-- <a href="https://www.facebook.com/charlene.rocha.98" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a> -->
       </div>
     </div>
   </section><!-- End Hero -->
@@ -90,9 +90,15 @@
           <div class="col-lg-6 pt-4 pt-lg-0 content">
             <h3>Who Am I?</h3>
             <p>
-              With a keen interest in computer science and its application in building software systems, I am currently looking for Winter 2023 software development co-op opportunities. My dedication, hardwork, and intellectual curiousity keep me determined to advance my learning and have pushed me to create meaningful, complex projects.
-
-              My vast interests are demonstrated through my unique experiences such as starring in an environmental activism TV series, leading women in STEM workshops, and giving TEDx Talks.
+              <h6>Honours Bachelor of Software Engineering at University of Waterloo<br></h6><br>
+              <li>
+                Curious and determined to advance my learning, I will use my 5+ years of programming experience through co-ops, hackathons, and personal projects to inspire growth in the tech field.
+              </li><br>
+              <li>
+                Through starring in an environmental activism TV series, leading women in STEM workshops, and giving TEDx Talks, I have become a leader for change.
+              </li>
+              <br>
+              <b>Looking for Winter 2023 SWE Internship</b>
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -168,8 +174,8 @@
       </div>
     </section>End Facts Section -->
 
-    <!-- ======= Resume Section ======= 
-    <section id="resume" class="resume">
+    <!-- ======= Resume Section =======  -->
+    <!-- <section id="resume" class="resume">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -232,7 +238,8 @@
         </div>
 
       </div>
-    </section> End Resume Section -->
+    </section>  -->
+    <!-- End Resume Section -->
 
     <!-- ======= Skills Section ======= 
     <section id="skills" class="skills section-bg">
@@ -310,6 +317,20 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/waste/label.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>All in Good Waste:</h4>
+                <p>Machine Learning Trash Sorter</p>
+                <div class="portfolio-links">
+                  <a href="https://photos.app.goo.gl/vfsSUjzfvvxU9gr67" target="_blank" title="All in Good Waste"> <i class="bx bx-link"></i></a>
+                  <a href="waste.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="All in Good Waste"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
@@ -433,8 +454,9 @@
                 </svg>
                 <i class="bx bx-book-content"></i>
               </div>
-              <h4><a href="https://future.utoronto.ca/national-scholarship/about/" target="_blank">The University of Toronto National Book Award</a></h4>
-              <p>This award recognizes and rewards students with superior academic performance, original and creative thought, and exceptional achievement in a broad context. They demonstrate enthusiasm for intellectual exploration and have a strong involvement in the lives of their schools and communities.</p>
+              <h4><a href="https://uwaterloo.ca/undergraduate-entrance-awards/awards/gloria-baylis-entrance-award" target="_blank">The Gloria Baylis Award</a></h4>
+              <h6>$18,250</h6>
+              <p>This award recognizes and rewards a student with superior academic performance, original and creative thought, and exceptional achievement in a broad context. They demonstrate enthusiasm for intellectual exploration and have a strong involvement in the lives of their schools and communities.</p>
             </div>
           </div>
 
@@ -446,8 +468,9 @@
                 </svg>
                 <i class="bx bx-calculator"></i>
               </div>
-              <h4><a href="https://www.schulichleaders.com/fr/charlene-rocha" target="_blank">Schulich Leader Scholarship Winner</a></h4>
-              <p>The Schulich Leader Scholarship is Canada’s most coveted undergraduate STEM scholarship. It is awarded to entrepreneurial-minded high school graduates enrolling in a Science, Technology, Engineering or Math program.</p>
+              <h4><a href="https://www.schulichleaders.com/fr/charlene-rocha" target="_blank">Schulich Leader</a></h4>
+              <h6>$80,000</h6>
+              <p>The Schulich Leader Scholarship is Canada’s most coveted undergraduate STEM scholarship. It is awarded to entrepreneurial-minded high school graduates enrolling in a Science, Technology, Engineering or Math program. I was offered this scholarship for pursuing computer science at UBC.</p>
             </div>
           </div>
 
@@ -459,8 +482,9 @@
                 </svg>
                 <i class="bx bx-world"></i>
               </div>
-              <h4><a href="https://www.heritagetrust.on.ca/en/pages/programs/recognition-programs/2020-recipients#LGOHA-2020-2" target="_blank">Lieutenant Governor's Ontario Heritage Youth Achievement Award</a></h4>
-              <p>This award recognizes exceptional contributions to cultural and natural heritage conservation, environmental sustainability and biodiversity. Recipients reinforce a vibrant cultural environment to future generations.</p>
+              <h4><a href="https://ca.finance.yahoo.com/news/durham-region-high-school-student-120000506.html" target="_blank">Meridian Commitment to Communities Scholarship</a></h4>
+              <h6>$10,000</h6>
+              <p>Each year, Meridian awards one award to a high school graduate who has demonstrated both academic excellence and an outstanding commitment to communities of their own. The recipient uses energy, creativity and entrepreneurship to solve or address a vital problem in their community.</p>
             </div>
           </div>
 
@@ -472,8 +496,8 @@
                 </svg>
                 <i class="bx bx-wrench"></i>
               </div>
-              <h4><a href="https://youtu.be/rS-e1Nd9qos" target="_blank">WEMADEIT's Young Woman in Engineering</a></h4>
-              <p>Recipients are aspiring engineers chosen to interview women in the field. They show significant potential and continually inspire others about the future of STEM.</p>
+              <h4><a href="https://www.heritagetrust.on.ca/en/pages/programs/recognition-programs/2020-recipients#LGOHA-2020-2" target="_blank">Lieutenant Governor's Ontario Heritage Youth Achievement Award</a></h4>
+              <p>This award recognizes exceptional contributions to cultural and natural heritage conservation, environmental sustainability and biodiversity. Recipients reinforce a vibrant cultural environment to future generations.</p>
             </div>
           </div>
 
@@ -498,8 +522,8 @@
                 </svg>
                 <i class="bx bx-box"></i>
               </div>
-              <h4><a href="https://www.cemc.uwaterloo.ca/contests/contests.html" target="_blank">Other</a></h4>
-              <p>Additionally, other awards include the Gloria Baylis Award, the Isabel Farrar Scholarship, the Amare et Servire Award, the 2020 Cayley Mathematics Contest, and the 2020 Canadian Senior Mathematics Contest</p>
+              <h4><a href="https://uwaterloo.ca/news/engineering-students/advocating-better-world" target="_blank">Other</a></h4>
+              <p>Additionally, other awards include the Isabel Farrar Scholarship, the University of Toronto National Book Award, the Amare et Servire Award, the 2020 Cayley Mathematics Contest, and the 2020 Canadian Senior Mathematics Contest</p>
             </div>
           </div>
         </div>
@@ -688,9 +712,9 @@
         <a href="mailto:charocha03@gmail.com" target="_blank" class="envelope"><i class="bx bx-envelope"></i></a>
         <a href="https://www.linkedin.com/in/-charlene-rocha/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://www.instagram.com/charlenerocha_/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <!-- <a href="#" class="github"><i class="bx bxl-github"></i></a> -->
+        <a href="https://github.com/charlenerocha" target="_blank" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://twitter.com/_charlenerocha" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.facebook.com/charlene.rocha.98" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <!-- <a href="https://www.facebook.com/charlene.rocha.98" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a> -->
       </div>
     </div>
   </footer><!-- End Footer -->
