Changing social buttons

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
       <p>I am a <span class="typed" data-typed-items= "Software Engineer,TEDx speaker,Lifelong Learner"></span></p>
       <div class="social-links">
         <a href="mailto:charocha03@gmail.com" target="_blank" class="envelope"><i class="bx bx-envelope"></i></a>
-        <a href="https://www.linkedin.com/in/-charlene-rocha/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://www.instagram.com/charlenerocha_/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/charlenerochaa/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <!-- <a href="https://www.instagram.com/charlenerocha_/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a> -->
         <a href="https://github.com/charlenerocha" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://twitter.com/_charlenerocha" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <!-- <a href="https://twitter.com/_charlenerocha" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <!-- <a href="https://www.facebook.com/charlene.rocha.98" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a> -->
       </div>
     </div>
@@ -90,13 +90,14 @@
           <div class="col-lg-6 pt-4 pt-lg-0 content">
             <h3>Who Am I?</h3>
             <p>
-              <h6>Honours Bachelor of Software Engineering at University of Waterloo<br></h6><br>
+              I'm an innovative Software Engineering student at the University of Waterloo seeking Winter 2023 internship opportunities. After creating programming projects for non-profits, I discovered my passion for using computer science to contribute to my activism work. Now, I'm hoping to use my 5+ years of programming experience through co-ops, hackathons, and personal projects to inspire growth in the tech field.
+              <!-- <h6>Honours Bachelor of Software Engineering at University of Waterloo<br></h6><br>
               <li>
                 Curious and determined to advance my learning, I will use my 5+ years of programming experience through co-ops, hackathons, and personal projects to inspire growth in the tech field.
               </li><br>
               <li>
                 Through starring in an environmental activism TV series, leading women in STEM workshops, and giving TEDx Talks, I have become a leader for change.
-              </li>
+              </li> -->
               <br>
               <b>Looking for Winter 2023 SWE Internship</b>
             </p>
@@ -710,10 +711,10 @@
       <p>Software Engineer, TEDx speaker, & Lifelong Learner</p>
       <div class="social-links">
         <a href="mailto:charocha03@gmail.com" target="_blank" class="envelope"><i class="bx bx-envelope"></i></a>
-        <a href="https://www.linkedin.com/in/-charlene-rocha/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://www.instagram.com/charlenerocha_/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/charlenerochaa/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <!-- <a href="https://www.instagram.com/charlenerocha_/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a> -->
         <a href="https://github.com/charlenerocha" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://twitter.com/_charlenerocha" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <!-- <a href="https://twitter.com/_charlenerocha" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <!-- <a href="https://www.facebook.com/charlene.rocha.98" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a> -->
       </div>
     </div>
