Adds ghc subpage

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                 projects to inspire growth in the tech field.
                 <br /><br /><br /><br />
                 Now, I'm an innovative Software Engineering student at the
-                University of Waterloo. I'm currently seeking Fall 2023 (Sept
-                2023 - Dec 2023) software engineer internship opportunities.
+                University of Waterloo. I'm currently seeking Summer 2024 (May
+                2024 - Aug 2024) software engineer internship opportunities.
 
                 <!-- <h6>Honours Bachelor of Software Engineering at University of Waterloo<br></h6><br>
               <li>
@@ -331,13 +331,13 @@
                 <p><em>May 2022-Aug 2022</em></p>
                 <ul>
                   <li>
-                    Revamped various
+                    Revamped
                     <highlight>JavaScript API</highlight> endpoints, migrating
                     from a monolithic system to a scalable and parallel
                     <highlight>microservices</highlight> architecture.
                   </li>
                   <li>
-                    Applied <highlight>Agile</highlight> methodology to ship 5
+                    Applied <highlight>Agile</highlight> methodology to help ship 5
                     products and present 2 of them on a company-wide level.
                   </li>
                 </ul>
@@ -370,8 +370,7 @@
                 <p><em>May 2022-Aug 2022</em></p>
                 <ul>
                   <li>
-                    Crafted an interactive avatar by applying the
-                    <highlight>Software Development Life Cycle</highlight> to
+                    Crafted an interactive avatar to
                     provide accessible support for stroke patients while
                     navigating through features.
                   </li>
@@ -444,22 +443,6 @@
                 <div>
                   <h6 class="tool">Ultimaker Cura</h6>
                   <h6 class="tool">OpenSCAD</h6>
-                </div>
-              </div>
-              <div class="resume-item">
-                <h3>Durham District School Board</h3>
-                <h4>Computer Science Tutor</h4>
-                <p><em>Sept 2017-May 2021</em></p>
-                <ul>
-                  <li>
-                    Designed and taught
-                    <highlight>Object-Oriented Programming</highlight> lessons
-                    in Java where each student obtained 80+%.
-                  </li>
-                </ul>
-                <div>
-                  <h6 class="language">Java</h6>
-                  <h6 class="language">Python</h6>
                 </div>
               </div>
               <div class="resume-item">
