Completing ghc subpage

--- a/ghc/index.html
+++ b/ghc/index.html
@@ -157,51 +157,60 @@
                 Glad our paths crossed at the GHC Tech Conference. I'm looking
                 forward to connecting! 🚀
               </p>
-              <div class="social-links">
-                <a
-                  href="mailto:crocha@uwaterloo.ca"
-                  target="_blank"
-                  class="envelope"
-                  ><i class="bx bx-envelope"></i
-                ></a>
-                <a
-                  href="https://www.linkedin.com/in/charlenerochaa/"
-                  target="_blank"
-                  class="linkedin"
-                  ><i class="bx bxl-linkedin"></i
-                ></a>
-                <a
-                  href="https://github.com/charlenerocha"
-                  target="_blank"
-                  class="github"
-                  ><i class="bx bxl-github"></i
-                ></a>
-
+              <div class="ghc">
+                <div class="social-links">
+                  <a
+                    href="https://www.linkedin.com/in/charlenerochaa/"
+                    target="_blank"
+                    class="linkedin"
+                    ><i class="bx bxl-linkedin"></i
+                  ></a>
+                  <a
+                    href="https://www.charlenerocha.com/"
+                    target="_blank"
+                    class="globe"
+                    ><i class="bx bx-globe"></i
+                  ></a>
+                  <a
+                    href="mailto:crocha@uwaterloo.ca"
+                    target="_blank"
+                    class="envelope"
+                    ><i class="bx bx-envelope"></i
+                  ></a>
+                  <a
+                    href="https://github.com/charlenerocha"
+                    target="_blank"
+                    class="github"
+                    ><i class="bx bxl-github"></i
+                  ></a>
+                </div>
                 <div class="resume-button">
                   <a
                     href="Charlene_Rocha_Resume.pdf"
                     download
                     target="_blank"
-                    class="button"
                     id="test"
-                    >Download my resume</a
+                    >View my resume</a
                   >
                 </div>
-              </div>
-
-              <!-- <br /><br /><br />
-                A little about me...after creating programming projects for
+                I'm a third year Software Engineering student at the
+                University of Waterloo seeking
+                <b>Summer 2024 (May 2024 - Aug 2024) SWE internship</b>
+                opportunities. <br /><br />
+                After creating programming projects for
                 non-profits, I discovered my passion for using computer science
                 to contribute to my activism work. I'm hoping to use my 7+ years
                 of programming experience through co-ops, hackathons, and
                 personal projects to inspire growth in the tech field.
                 <br /><br />
-                Now, I'm a third year Software Engineering student at the
-                University of Waterloo seeking Summer 2024 (May 2024 - Aug 2024)
-                software engineer internship opportunities. -->
+                To learn more about me,
+                <a href="https://www.charlenerocha.com/" target="_blank"
+                  >visit my website</a
+                >!
+              </div>
             </div>
 
-            <div class="col-md-3"></div>
+            <!-- <div class="col-md-3"></div> -->
 
             <!-- <div class="col-md-3" style="margin-right: 40px">
               <img
@@ -211,10 +220,15 @@
               />
             </div> -->
 
-            <div class="col-md-3" style="margin-right: 40px">
+            <div class="col-md-3">
               <img
-                src="../assets/img/profile-img.jpg"
-                class="img-fluid img-circle"
+                src="../assets/img/portfolio/ted.jpg"
+                class="img-fluid"
+                alt=""
+              />
+              <img
+                src="../assets/img/portfolio/protest.jpg"
+                class="img-fluid"
                 alt=""
               />
             </div>
@@ -222,134 +236,6 @@
         </div>
       </section>
       <!-- End About Section -->
-
-      <!-- ======================================== -->
-      <!-- ================ FACTS ================= -->
-      <!-- ======================================== -->
-      <section id="facts" class="facts">
-        <div class="container" data-aos="fade-up">
-          <div class="row">
-            <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-              <div class="count-box">
-                <i class="bi bi-hourglass"></i>
-                <span
-                  data-purecounter-start="0"
-                  data-purecounter-end="7"
-                  data-purecounter-duration="1"
-                  class="purecounter"
-                ></span>
-                <p>Years coding</p>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
-              <div class="count-box">
-                <i class="bi bi-journal-richtext"></i>
-                <span
-                  data-purecounter-start="0"
-                  data-purecounter-end="4358"
-                  data-purecounter-duration="1"
-                  class="purecounter"
-                ></span>
-                <p>Git contributions</p>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6">
-              <div class="count-box">
-                <i class="bi bi-emoji-smile"></i>
-                <span
-                  data-purecounter-start="0"
-                  data-purecounter-end="13"
-                  data-purecounter-duration="1"
-                  class="purecounter"
-                ></span>
-                <p>Projects</p>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-              <div class="count-box">
-                <i class="bi bi-award"></i>
-                <span
-                  data-purecounter-start="0"
-                  data-purecounter-end="22"
-                  data-purecounter-duration="1"
-                  class="purecounter"
-                ></span>
-                <p>Awards</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- End Facts Section -->
-
-      <!-- ======= Skills Section =======  -->
-      <!-- <section id="skills" class="skills section-bg">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="row skills-content">
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">ur mom <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
-    </section>  -->
     </main>
     <!-- End #main -->
 
@@ -387,13 +273,6 @@
       </div>
     </footer>
     <!-- End Footer -->
-
-    <div id="preloader"></div>
-    <a
-      href="../#"
-      class="back-to-top d-flex align-items-center justify-content-center"
-      ><i class="bi bi-arrow-up-short"></i
-    ></a>
 
     <!-- Vendor JS Files -->
     <script src="../assets/vendor/aos/aos.js"></script>
