--- a/ghc/index.html
+++ b/ghc/index.html
@@ -193,15 +193,15 @@
                     >View my resume</a
                   >
                 </div>
-                I'm a third year Software Engineering student at the
-                University of Waterloo seeking
+                I'm a third year Software Engineering student at the University
+                of Waterloo seeking
                 <b>Summer 2024 (May 2024 - Aug 2024) SWE internship</b>
                 opportunities. <br /><br />
-                After creating programming projects for
-                non-profits, I discovered my passion for using computer science
-                to contribute to my activism work. I'm hoping to use my 7+ years
-                of programming experience through co-ops, hackathons, and
-                personal projects to inspire growth in the tech field.
+                After creating programming projects for non-profits, I
+                discovered my passion for using computer science to contribute
+                to my activism work. I'm hoping to use my 7+ years of
+                programming experience through co-ops, hackathons, and personal
+                projects to inspire growth in the tech field.
                 <br /><br />
                 To learn more about me,
                 <a href="https://www.charlenerocha.com/" target="_blank"
