--- a/index.html
+++ b/index.html
@@ -280,6 +280,37 @@
               <h3 class="resume-title">Experience</h3>
               <div class="resume-item">
                 <h3>
+                  <a href="https://www.ea.com/en-ca" target="_blank"
+                    ><img
+                      src="assets/img/resume/ea.png"
+                      class="img-circle"
+                      alt=""
+                  /></a>
+                  Electronic Arts
+                </h3>
+                <h4>Software Engineer Intern</h4>
+                <p><em>Sept 2023-Dec 2023</em></p>
+                <!-- <ul>
+                  <li>
+                    Worked on a secure admin reports page with robust <highlight>user authentication </highlight> protocols and aided in the successful launch of popular new features, such as a main admin dashboard on the Data Insights and Security team.
+                  </li>
+                </ul> -->
+                <!-- <div>
+                  <h6 class="language">Go</h6>
+                  <h6 class="language">TypeScript</h6>
+                  <h6 class="language">JavaScript</h6>
+                  <h6 class="language">SQL</h6>
+                  <h6 class="language">Rust</h6>
+                  <h6 class="framework">React</h6>
+                  <h6 class="tool">Git</h6>
+                  <h6 class="tool">AWS</h6>
+                  <h6 class="tool">Docker</h6>
+                  <h6 class="tool">Apache Kafka</h6>
+                  <h6 class="tool">DataDog</h6>
+                </div> -->
+              </div>
+              <div class="resume-item">
+                <h3>
                   <a href="https://1password.com/" target="_blank"
                     ><img
                       src="assets/img/resume/1Password.png"
@@ -288,19 +319,11 @@
                   /></a>
                   1Password
                 </h3>
-                <h4>Software Developer Intern</h4>
+                <h4>Full Stack Developer Intern</h4>
                 <p><em>Jan 2023-Apr 2023</em></p>
                 <ul>
                   <li>
-                    Built a secure reports page for administrators to view team
-                    data, using strict access controls,
-                    <highlight>user authentication </highlight> protocols, and
-                    <highlight>multi-layered security measures</highlight>.
-                  </li>
-                  <li>
-                    Assisted in the successful launch of new features, including
-                    the implementation of a main dashboard which had a
-                    many successful users.
+                    Worked on a secure admin reports page with robust <highlight>user authentication </highlight> protocols and aided in the successful launch of popular new features, such as a main admin dashboard on the Data Insights and Security team.
                   </li>
                 </ul>
                 <div>
@@ -332,13 +355,9 @@
                 <ul>
                   <li>
                     Revamped
-                    <highlight>JavaScript API</highlight> endpoints, migrating
-                    from a monolithic system to a scalable and parallel
+                    <highlight>JavaScript API</highlight> endpoints to help migrate from a monolithic
+                    system to a scalable and parallel
                     <highlight>microservices</highlight> architecture.
-                  </li>
-                  <li>
-                    Applied <highlight>Agile</highlight> methodology to help ship 5
-                    products and present 2 of them on a company-wide level.
                   </li>
                 </ul>
                 <div>
@@ -350,7 +369,7 @@
                   <h6 class="framework">React</h6>
                   <h6 class="tool">Git</h6>
                   <h6 class="tool">AWS</h6>
-                  <h6 class="tool">Jenkings</h6>
+                  <h6 class="tool">Jenkins</h6>
                   <h6 class="tool">Jira</h6>
                   <h6 class="tool">Postman</h6>
                   <h6 class="tool">Maven</h6>
@@ -370,9 +389,7 @@
                 <p><em>May 2022-Aug 2022</em></p>
                 <ul>
                   <li>
-                    Crafted an interactive avatar to
-                    provide accessible support for stroke patients while
-                    navigating through features.
+                    Designed a user-friendly avatar for a TeleRehab app, promoting neurorehabilitation accessibility for stroke survivors.
                   </li>
                 </ul>
                 <div>
@@ -380,7 +397,7 @@
                   <h6 class="language">Java</h6>
                   <h6 class="language">C++</h6>
                   <h6 class="tool">Unity</h6>
-                  <h6 class="tool">Andriod SDK</h6>
+                  <h6 class="tool">Android SDK</h6>
                 </div>
               </div>
             </div>
@@ -402,7 +419,7 @@
                 <p><em>Sept 2021-Apr 2025</em></p>
                 <ul>
                   <li>
-                    Coursework: Programming Principles, Data Structures and
+                    <highlight>Coursework</highlight>: Programming Principles, Data Structures and
                     Algorithms, Data Abstraction and Implementation, Foundations
                     of Sequential Programs, Database Management, Combinatorics.
                   </li>
